syntax = "proto3";
package properties;

import "assetmantle/base/ids/v1/propertyID.v1.proto";
import "assetmantle/base/ids/v1/dataID.v1.proto";
import "gogoproto/gogo.proto";

message MesaProperty {
  option (gogoproto.goproto_getters) = false;

  ids.PropertyID i_d = 1;
  ids.DataID data_i_d = 2;
}
